# pong_fingerprint

./: aidl_service
.github/workflows/: build.yml
aidl_service/: CMakeLists.txt
aidl_service/include/: IFingerprint.h
aidl_service/src/: service_main.cpp
ksu_fp_aidl_nt.pong/: module.prop  post-fs-data.sh  sepolicy.rule  service.sh
